--- a/.md-pdf/style.css
+++ b/.md-pdf/style.css
@@ -1,7 +1,6 @@
-@import url('https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@400;700&display=swap');
 
 body {
-    font-family: 'Noto Sans JP', sans-serif;
+    font-family: '"MS –¾’©";';
     font-size: 4mm;
 }
 
